# VisualSlamPractice

Backend/directBA/: CMakeLists.txt  directBA.cpp
Backend/g2oBA/: BALProblem.cpp  BALProblem.h  CMakeLists.txt  g2o_ba_type.h  g2o_bunddle_adjustment.cpp  tools.h
Basics/Q4/hw1/: CMakeLists.txt
Basics/Q4/hw1/src/: hello.c
Basics/Q6-Bonus/: CMakeLists.txt
FeatureDiscriptors/E2Rt/: CMakeLists.txt  E2Rt.cpp
FeatureDiscriptors/GN-BA/: CMakeLists.txt  GN-BA.cpp
FeatureDiscriptors/computeORB/: CMakeLists.txt  computeORB.cpp
LieAlgebra/Q6/: CMakeLists.txt  draw_trajectory.cpp
LieAlgebra/Q7/: CMakeLists.txt  draw_trajectory2.cpp
NonlinearOptimization/disparity/: CMakeLists.txt  disparity.cpp
NonlinearOptimization/gaussnewton/: CMakeLists.txt  gaussnewton.cpp
NonlinearOptimization/undistort_image/: CMakeLists.txt  undistort_image.cpp
RigidBodyMotion/: eigenGeometry.cpp  eigenMatrix.cpp
VisualOdometry/direct_method/: CMakeLists.txt  direct_method.cpp
VisualOdometry/optical_flow/: CMakeLists.txt  optical_flow.cpp
